--- a/face_recognition_sys/requirements.txt
+++ b/face_recognition_sys/requirements.txt
@@ -13,11 +13,11 @@ comtypes==1.2.1
 contourpy==1.2.0
 cycler==0.12.1
 decorator==5.1.1
-dlib==19.24.2
+# dlib==19.24.2
 exceptiongroup==1.2.0
 executing==2.0.1
 face-recognition==1.3.0
-face_recognition_models==0.3.0
+# face_recognition_models==0.3.0
 fastapi==0.109.0
 flatbuffers==23.5.26
 fonttools==4.47.2
@@ -59,7 +59,7 @@ protobuf==3.20.3
 psutil==5.9.7
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyalsaaudio==0.10.0
+# pyalsaaudio==0.10.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycaw==20230407
