--- a/face_recognition_sys/requirements.txt
+++ b/face_recognition_sys/requirements.txt
@@ -2,3 +2,11 @@ fastapi==0.83.0
 uvicorn==0.17.0
 numpy==1.19.5
 python-multipart==0.0.6
+google-api-core==2.15.0
+google-api-python-client==2.114.0
+google-auth==2.26.2
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.62.0
+gspread==5.12.4
+oauth2client==4.1.3
