--- a/face_recognition_sys/requirements.txt
+++ b/face_recognition_sys/requirements.txt
@@ -39,6 +39,7 @@ rsa==4.9
 six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
+tqdm==4.67.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
